--- a/.github/workflows/experiment-7.2.yaml
+++ b/.github/workflows/experiment-7.2.yaml
@@ -1,4 +1,4 @@
-name: Build React App (Experiment-3.1)
+name: Build React App (Experiment-7.2)
 
 on:
   push:
@@ -11,6 +11,7 @@ on:
       - main
     paths:
       - 'React-project/Experiment-7.2/**'
+  workflow_dispatch:
 
 jobs:
   build:
